Fixed spacing on replay screen message.

--- a/frontend/src/components/game/gameStyle.css
+++ b/frontend/src/components/game/gameStyle.css
@@ -123,6 +123,8 @@ td {
   text-align: center;
   word-wrap: normal;
   width: 175px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 @media (min-width: 1200px) {
